# Angiography

./: .gitattributes  .gitignore  arcade_cadica.ipynb  dataset.py  dataset_notebook.ipynb  engine_branch1.py  engine_branch2.py  eval_dca1.ipynb  prepare_mendeley.py  pyproject.toml  requirements.txt  run_training.sh  setup_dca1.py  setup_vast.sh  setup_vastai.sh  test.py  train_branch1.py  train_branch2.py  yolo26s_training.ipynb
SAM-VMNet-ARCADE/: dataset_notebook.ipynb  run_stenosis_vast.ipynb
SAM_VMNet/: .gitignore  README.md  RUNBOOK_VAST_H100.md  TRAINING_GUIDE.md  dataset.py  engine_branch1.py  engine_branch2.py  eval.ipynb  evaluate.ipynb  feature_processor.py  prep_data.py  prepare_mendeley.py  requirements.txt  run_stenosis_vast.ipynb  run_training.sh  run_vast_h100_pipeline.sh  setup_arcade.py  setup_vast.sh  showcase_model.ipynb  test.py  test.sh  train.sh  train_branch1.py  train_branch2.py  utils.py
SAM_VMNet/configs/: config_setting.py  config_setting_dca1.py
SAM_VMNet/evaluation/: metrics.json
YOLO26m/: yolo26m_eval.ipynb
YOLO26s/: yolo26s_eval.ipynb
YOLOv8-stenosis/: README.md  data.yaml  evaluate.py  run_all.sh
datasets/: README.md
demo-app/: README.md
demo-app/backend/: pyproject.toml  requirements.txt
demo-app/backend/app/: classification.py  config.py  data.py  inference.py  label_utils.py  main.py  models_registry.py  schemas.py
demo-app/backend/tests/: conftest.py  test_api.py  test_classification.py  test_data.py  test_inference_cache.py  test_label_utils.py  test_models_registry.py  test_prepare_cadica_demo_data.py
models/sam_vmnet/: README.md  RUNBOOK_VAST_H100.md  engine_branch2.py  eval.ipynb  pyproject.toml  run_vast_h100_pipeline.sh  setup_arcade.py  setup_vast.sh  showcase_model.ipynb  test.sh  train.sh  train_branch1.py  train_branch2.py
models/sam_vmnet/configs/: config_setting.py
models/sam_vmnet/med_sam/: pyproject.toml
models/sam_vmnet/models/vmunet/: samvmnet.py  vmunet.py
models/sam_vmnet/pre_trained_weights/: README.md  best-epoch142-loss0.3488.pth
models/sam_vmnet/scripts/: audit_arcade_split.py  prepare_arcade_for_samvmnet.py  rebuild_arcade_split.py  vast_h100_execute_pipeline.sh  vast_h100_launch.sh
models/yolo26m_cadica/: README.md  pyproject.toml  train.py
models/yolo26m_cadica/manifests/: patient_level_80_10_10_seed42.json
models/yolo26m_cadica/runs/cadica_selected_seed42/: args.yaml  results.csv
models/yolo26m_cadica/runs/cadica_selected_seed42/weights/: best.pt  last.pt
models/yolo26m_cadica/runs/cadica_selected_seed42_4090/: args.yaml  iou_metrics.csv  results.csv
models/yolo26m_cadica/scripts/: cadica_selected_utils.py  compute_mean_iou.py  export_cadica_split_manifest.py  iou_metrics.py  monitor_training.py  periodic_iou_eval.py  prepare_cadica_selected.py  run_vast_4090_pipeline.sh  vast_4090_follow.sh  vast_4090_sync_and_start.sh  vast_4090_wait_collect_and_stop.sh  verify_prepared_dataset.py  watch_results.py
models/yolo26m_cadica/tests/: test_cadica_selected.py
models/yolo26x/: README.md  pyproject.toml  train.py
models/yolo26x/reports/: cadica_selected_seed42_4090_results.md
models/yolo26x/scripts/: compute_mean_iou.py  iou_metrics.py  monitor_training.py  periodic_iou_eval.py  rewrite_data_yaml.py  run_vast_4090_pipeline.sh  vast_4090_follow.sh  vast_4090_sync_and_start.sh
models/yolo26x/tests/: test_train_defaults.py  test_vast_dataset_scripts.py
models/yolov8-stenosis/: .gitignore  README.md  best.onnx  evaluate.py  pyproject.toml  requirements.txt  train.py
models/yolov8-stenosis/results/: metrics.json  results.csv
models/yolov8-stenosis/scripts/: benchmark_speed.py  prepare_split.py  verify_dataset.py  visualize_results.py
output/jupyter-notebook/: arcade-balanced-eda.ipynb  cadica-eda.ipynb  cadica-leakage-audit.ipynb  pyproject.toml
(+56 files in other folders)
