[project]
name = "angio-demo-backend"
version = "0.1.0"
description = "FastAPI backend for the Angiography demo app."
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.116.1",
  "pillow==11.3.0",
  "pydantic==2.11.7",
  "numpy==2.3.2",
  "torch>=2.5.0",
  "ultralytics>=8.4.0,<9",
  "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[tool.uv]
package = false
