[project]
name = "angio-sam-vmnet"
version = "0.1.0"
description = "SAM-VMNet segmentation and stenosis detection workflow."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "chardet",
  "einops",
  "h5py",
  "matplotlib",
  "medpy",
  "medsam",
  "monai",
  "nibabel",
  "opencv-python",
  "packaging",
  "pillow",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "submitit",
  "tensorboardX",
  "termcolor",
  "thop",
  "timm==0.4.12",
  "torch",
  "torchaudio",
  "torchvision",
  "tqdm",
  "yacs",
]

[project.optional-dependencies]
notebooks = [
  "SimpleITK>=2.2.1",
  "ipympl",
  "ipywidgets",
  "jupyterlab",
]
dev = [
  "pytest",
]

[tool.uv]
package = false

[tool.uv.sources]
medsam = { path = "med_sam" }
