[project]
name = "medsam"
version = "0.0.1"
description = "MedSAM package vendored for SAM-VMNet."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "SimpleITK>=2.2.1",
  "ipympl",
  "ipywidgets",
  "jupyterlab",
  "matplotlib",
  "monai",
  "nibabel",
  "opencv-python",
  "scikit-image",
  "scipy",
  "tqdm",
]

[project.optional-dependencies]
all = [
  "onnx",
  "onnxruntime",
  "pycocotools",
]
dev = [
  "black",
  "flake8",
  "isort",
  "mypy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
